feta: add get and get all
