# src/featureTypes/routes/featureTypesRouter.ts
@@ -1,16 +1,16 @@
 import { Router } from 'express';
 import { FactoryFunction } from 'tsyringe';
-import { WorkspacesController } from '../controllers/';
+import { FeatureTypesController } from '../controllers/featureTypesController';
 
 const featureTypesRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
   const router = Router();
   const controller = dependencyContainer.resolve(FeatureTypesController);
 
-  router.get('/:workspaceName/:dataStoreName', controller.getWorkspaces.bind(controller));
-  router.post('/:workspaceName/:dataStoreName', controller.createWorkspace.bind(controller));
-  router.get('/:workspaceName/:dataStoreName/:featureTypeName', controller.getWorkspace.bind(controller));
-  router.delete('/:workspaceName/:dataStoreName/:featureTypeName', controller.deleteWorkspace.bind(controller));
-  router.put('/:workspaceName/:dataStoreName/:featureTypeName', controller.updateWorkspace.bind(controller));
+  router.get('/:workspaceName/:dataStoreName', controller.getFeatureTypes.bind(controller));
+  // router.post('/:workspaceName/:dataStoreName', controller.createWorkspace.bind(controller));
+  router.get('/:workspaceName/:dataStoreName/:featureTypeName', controller.getFeatureType.bind(controller));
+  // router.delete('/:workspaceName/:dataStoreName/:featureTypeName', controller.deleteWorkspace.bind(controller));
+  // router.put('/:workspaceName/:dataStoreName/:featureTypeName', controller.updateWorkspace.bind(controller));
 
   return router;
 };
